cicd/k8s-kafka.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-deployment
  labels:
    app: kafka
spec:
  replicas: 1  # Kafka 브로커의 수 (하나의 브로커로 설정)
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: confluentinc/cp-kafka:7.4.6
          ports:
            - containerPort: 9092  # Kafka 브로커 포트
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
  labels:
    app: kafka
spec:
  ports:
    - port: 9092  # Kafka 브로커가 클라이언트에게 노출될 포트
  selector:
    app: kafka
