cicd/k8s-backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calit-backend-vname
spec:
  replicas: 2
  selector:
    matchLabels:
      type: calit-backend-vname
  strategy:
    type: RollingUpdate
  minReadySeconds: 10
  template:
    metadata:
      labels:
        type: calit-backend-vname
    spec:
      containers:
        - name: container
          image: minionz/calit-backend:latest
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
            successThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
      terminationGracePeriodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc-vname
spec:
  selector:
    type: calit-backend-vname
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress-vname
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "10"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - www.calit.kro.kr
      secretName: tls-secret
  rules:
    - host: www.calit.kro.kr
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-svc-vname
                port:
                  number: 8080
