cicd/k8s-frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calit-frontend-vname
spec:
  replicas: 2
  selector:
    matchLabels:
      app: calit-frontend-vname
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: calit-frontend-vname
    spec:
      containers:
        - name: calit-frontend-vname
          image: minionz/calit-frontend:latest
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc-vname
spec:
  selector:
    app: calit-frontend-vname
  ports:
    - port: 80
      name: "svc80"
      targetPort: 80
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress-vname
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "10"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - calit.kro.kr
      secretName: tls-secret
  rules:
    - host: calit.kro.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-svc-vname
                port:
                  number: 80
