cicd/k8s-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-iname
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "10"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - calit.kro.kr
      secretName: tls-secret
  rules:
    - host: calit.kro.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-svc-vname
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-svc-vname
                port:
                  number: 8080
